--- a/frontend/html/atualProd.html
+++ b/frontend/html/atualProd.html
@@ -85,19 +85,11 @@
                         <label for="categoria">Categoria *</label>
                         <select id="categoria" required>
                             <option value="">Selecione</option>
-                            <option value="CPU">CPU</option>
-                            <option value="GPU">GPU</option>
-                            <option value="RAM">RAM</option>
-                            <option value="Motherboard">Placa-Mãe</option>
-                            <option value="SSD">SSD</option>
-                            <option value="HDD">HD</option>
-                            <option value="PSU">Fonte</option>
-                            <option value="Case">Gabinete</option>
-                            <option value="Cooler">Cooler</option>
-                            <option value="Monitor">Monitor</option>
-                            <option value="Keyboard">Teclado</option>
-                            <option value="Mouse">Mouse</option>
-                            <option value="Other">Outro</option>
+                            <option value="SAUDE">Saude</option>
+                            <option value="BELEZA">Beleza</option>
+                            <option value="ACESSORIOS">Acessorios</option>
+                            <option value="ALIMENTO">Alimento</option>
+                            <option value="OUTROS">Outros</option>
                         </select>
                     </div>
 
